# MONTE_CARLO_OPTIMIZATION

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  api.py  experiments.yml  reproduce.md  requirements.txt
analysis/: performance_analysis.ipynb
bench/: runner.py
core/: oracles.py
lsm_cpp/: lsm_cpp_backend.cp311-win_amd64.pyd
lsm_cpp/src/: arena_allocator.h  bindings.cpp  lsm_pricer.cpp  lsm_pricer.h  lsm_pricer_arena.cpp  lsm_pricer_mp.cpp  lsm_pricer_simd.cpp  lsm_pricer_ultimate.cpp
lsm_py/: lsm_numba.py  lsm_pricer.py
tests_quant/: test_lsm_pricer.py  test_oracles.py
ui/: package-lock.json  package.json
ui/src/: App.css  App.tsx
